modified expand/collapse look, removed a lot of borders, changed pre tags for code text, fixed the output when the entire examples folder is run

--- a/python_ta/reporters/templates/stylesheet.css
+++ b/python_ta/reporters/templates/stylesheet.css
@@ -45,7 +45,11 @@ body {
 	width: 500px;
 	color: rgb(42, 77, 173);
 	background-color: rgb(255, 255, 255);
-	padding: 5px;
+	display: inline;
+	padding: 20px;
+}
+.wrap {
+    padding: 10px;
 }
 
 #inside {
@@ -53,6 +57,7 @@ body {
 	border: thin solid rgb(0, 0, 0);
 	background-color: rgb(199, 239, 252);
 	padding-top: 20px;
+	padding-bottom:20px;
 }
 
 #core {
@@ -65,6 +70,7 @@ body {
 	min-width: 50%;
 	background-color: rgb(255, 255, 255);
 	padding: 15px;
+	padding-top: 20px;
 }
 
 #code {
@@ -82,26 +88,26 @@ body {
 .code_id {
     color: rgb(255, 0, 0);
     font-weight: bold;
-    font-size: 95%;
 }
 
 .code_id a:link {
     color: rgb(255, 0, 0);
+    font-weight: normal;
 }
 
 .style_id {
     color: rgb(0, 0, 255);
     font-weight: bold;
-    font-size: 95%;
 }
 
 .style_id a:link {
     color: rgb(0, 0, 255);
+    font-weight: normal;
 }
 
-.snippet {
-	font-family: "Lucida Console", monospace;
-	font-weight: normal;
+pre {
+    white-space: normal;
+    font-size: 120%;
 }
 
 .grey {
@@ -133,4 +139,13 @@ body {
     width:100%;
     text-align: center;
     padding-top: 10px;
+}
+
+.slider {
+    cursor: pointer;
+    font-weight: bold;
+}
+.content {
+    display: none;
+    padding : 5px;
 }
